# natsql

./: Cargo.toml  sqlx-data.json
migrations/: 20230120185834_init.sql
src/: main.rs
