[package]
name = "natsql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.26.0"
clap = { version = "4.1.4", features = [ "derive" ] }
color-eyre = "0.6.2"
futures = "0.3.25"
serde_json = { version = "1.0.91", features = [ "raw_value" ]}
sqlx = { version = "0.6.2", features = [ "offline", "runtime-tokio-native-tls", "postgres", "json", "time" ] }
time = "0.3.17"
tokio = { version = "1.24.2", features = [ ] }

[profile.dev.package.backtrace]
opt-level = 3
